Refactors layout, update server call on notes list.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-top-bar></app-top-bar>
 
 <div>
-  <router-outlet></router-outlet>
+  <app-input-box></app-input-box>
+  <app-product-list></app-product-list>
 </div>
 
 <!-- 
